out
test.cpp: In function ‘void solve()’:
test.cpp:239:21: error: no matching function for call to ‘std::__debug::vector<std::__cxx11::basic_string<char> >::vector(int, SEG)’
  239 |     vs seg(3, SEG(N));
      |                     ^
In file included from /usr/include/c++/12/vector:74,
                 from /usr/include/c++/12/functional:62,
                 from stdc++.h:71:
/usr/include/c++/12/debug/vector:200:9: note: candidate: ‘template<class _InputIterator, class> std::__debug::vector<_Tp, _Allocator>::vector(_InputIterator, _InputIterator, const _Allocator&) [with <template-parameter-2-2> = _InputIterator; _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >]’
  200 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/12/debug/vector:200:9: note:   template argument deduction/substitution failed:
test.cpp:239:21: note:   deduced conflicting types for parameter ‘_InputIterator’ (‘int’ and ‘atcoder::segtree<long long int, op, e>’)
  239 |     vs seg(3, SEG(N));
      |                     ^
/usr/include/c++/12/debug/vector:234:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(_Base_ref) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >]’
  234 |       vector(_Base_ref __x)
      |       ^~~~~~
/usr/include/c++/12/debug/vector:234:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/12/debug/vector:226:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  226 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/12/debug/vector:226:43: note:   no known conversion for argument 1 from ‘int’ to ‘std::initializer_list<std::__cxx11::basic_string<char> >’
  226 |       vector(initializer_list<value_type> __l,
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/12/debug/vector:218:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(std::__debug::vector<_Tp, _Allocator>&&, std::__type_identity_t<_Alloc>&) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >; std::__type_identity_t<_Alloc> = std::allocator<std::__cxx11::basic_string<char> >]’
  218 |       vector(vector&& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/12/debug/vector:218:23: note:   no known conversion for argument 1 from ‘int’ to ‘std::__debug::vector<std::__cxx11::basic_string<char> >&&’
  218 |       vector(vector&& __x, const __type_identity_t<allocator_type>& __a)
      |              ~~~~~~~~~^~~
/usr/include/c++/12/debug/vector:215:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(const std::__debug::vector<_Tp, _Allocator>&, std::__type_identity_t<_Alloc>&) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >; std::__type_identity_t<_Alloc> = std::allocator<std::__cxx11::basic_string<char> >]’
  215 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/12/debug/vector:215:28: note:   no known conversion for argument 1 from ‘int’ to ‘const std::__debug::vector<std::__cxx11::basic_string<char> >&’
  215 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |              ~~~~~~~~~~~~~~^~~
/usr/include/c++/12/debug/vector:213:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(std::__debug::vector<_Tp, _Allocator>&&) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >]’
  213 |       vector(vector&&) = default;
      |       ^~~~~~
/usr/include/c++/12/debug/vector:213:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/12/debug/vector:212:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(const std::__debug::vector<_Tp, _Allocator>&) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >]’
  212 |       vector(const vector&) = default;
      |       ^~~~~~
/usr/include/c++/12/debug/vector:212:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/12/debug/vector:184:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(size_type, std::__type_identity_t<_Tp>&, const _Allocator&) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >; size_type = long unsigned int; std::__type_identity_t<_Tp> = std::__cxx11::basic_string<char>]’
  184 |       vector(size_type __n, const __type_identity_t<_Tp>& __value,
      |       ^~~~~~
/usr/include/c++/12/debug/vector:184:59: note:   no known conversion for argument 2 from ‘SEG’ {aka ‘atcoder::segtree<long long int, op, e>’} to ‘std::__type_identity_t<std::__cxx11::basic_string<char> >&’ {aka ‘const std::__cxx11::basic_string<char>&’}
  184 |       vector(size_type __n, const __type_identity_t<_Tp>& __value,
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/usr/include/c++/12/debug/vector:181:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(size_type, const _Allocator&) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >; size_type = long unsigned int]’
  181 |       vector(size_type __n, const _Allocator& __a = _Allocator())
      |       ^~~~~~
/usr/include/c++/12/debug/vector:181:47: note:   no known conversion for argument 2 from ‘SEG’ {aka ‘atcoder::segtree<long long int, op, e>’} to ‘const std::allocator<std::__cxx11::basic_string<char> >&’
  181 |       vector(size_type __n, const _Allocator& __a = _Allocator())
      |                             ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
/usr/include/c++/12/debug/vector:176:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector(const _Allocator&) [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >]’
  176 |       vector(const _Allocator& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/12/debug/vector:176:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/12/debug/vector:172:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::vector() [with _Tp = std::__cxx11::basic_string<char>; _Allocator = std::allocator<std::__cxx11::basic_string<char> >]’
  172 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/12/debug/vector:172:7: note:   candidate expects 0 arguments, 2 provided
